@@ -1,3 +1,7 @@
+2009-07-23	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* spintrcritical06/init.c: Test now hits forward and reverse cases.
+
 2009-07-22	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* spintrcritical09/init.c, spintrcritical09/spintrcritical09.scn: Make
